objects/Dealer_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Settings</relationshipLabel>
        <relationshipName>Dealer_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <formula>Account__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titles_Payment_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to allow us to send titles directly to a buyer with out waiting for payment, example would be our agreement with Carmax</description>
        <inlineHelpText>Used to allow us to send titles directly to a buyer with out waiting for payment, example would be our agreement with Carmax</inlineHelpText>
        <label>Titles Payment Exception</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealer Setting</label>
    <nameField>
        <displayFormat>Dealer Setting-{000000}</displayFormat>
        <label>Dealer Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>